# lidar_course

./: .gitignore  CMakeLists.txt  README.md
setup/: Dockerfile  README.md  download_data.sh
src/: bin_to_pcd.cpp  clusters_and_hulls.h  constrained_planar_cuts.h  dbscan.h  getdir.h  gpsimu_t.h  image.h  interface_types.h  load_bin.h  parse_calib.h  parse_oxts.h  point_cloud_kernels.h  process_pcd.cpp  process_sequence.cpp  processor.h  processor_params.h  ransac_ground.h  visualizer.cpp  visualizer.h
